Cambiado el tipo de dato (String -> TipoIncidencia) de los parámetros en métodos de ServicioIncidencia